Inverted i18n template file with actual translations

--- a/resetpassword/i18n/it/LC_MESSAGES/resetpassword.po
+++ b/resetpassword/i18n/it/LC_MESSAGES/resetpassword.po
@@ -27,55 +27,63 @@ msgid ""
 "\n"
 "%(password_reset_link)s\n"
 "\n"
-"If you no longer wish to make the above change, or if you did not "
-"initiate this request, please disregard and/or delete this e-mail.\n"
+"If you no longer wish to make the above change, or if you did not initiate "
+"this request, please disregard and/or delete this e-mail.\n"
 msgstr ""
+"\n"
+"Abbiamo ricevuto una richiesta di cambio password per il tuo account. \n"
+"Segui questo link per procedere con il reset della password:\n"
+"\n"
+"%(password_reset_link)s\n"
+"\n"
+"Se non desideri cambiare password o non hai effettuato tu la richiesta "
+"ignora quest email.\n"
 
 #: resetpassword/controllers/root.py:43
 msgid "Password reset request"
-msgstr ""
+msgstr "Richiesta cambio password"
 
 #: resetpassword/controllers/root.py:59
 msgid "Password reset request sent"
-msgstr ""
+msgstr "Richiesta di cambio password inviata"
 
 #: resetpassword/controllers/root.py:72
 msgid "Password reset request timed out"
-msgstr ""
+msgstr "La richiesta di cambio password è scaduta"
 
 #: resetpassword/controllers/root.py:77
 msgid "Invalid password reset request"
-msgstr ""
+msgstr "La richiesta di cambio password non è valida"
 
 #: resetpassword/controllers/root.py:90
 msgid "Password changed successfully"
-msgstr ""
+msgstr "La password è stata cambiata con successo"
 
 #: resetpassword/lib/forms.py:15
 msgid "New password"
-msgstr ""
+msgstr "Nuova Password"
 
 #: resetpassword/lib/forms.py:16
 msgid "Confirm new password"
-msgstr ""
+msgstr "Conferma nuova password"
 
 #: resetpassword/lib/forms.py:18
 msgid "Save new password"
-msgstr ""
+msgstr "Salva nuova password"
 
 #: resetpassword/lib/forms.py:22
 msgid "Email address"
-msgstr ""
+msgstr "Indirizzo Email"
 
 #: resetpassword/lib/forms.py:23
 msgid "Send Request"
-msgstr ""
+msgstr "Invia Richiesta"
 
 #: resetpassword/templates/change_password.html:9
 msgid "Change Password"
-msgstr ""
+msgstr "Cambia Password"
 
 #: resetpassword/templates/index.html:9
 msgid "Request Password Reset"
-msgstr ""
+msgstr "Richiedi Cambio Password"
 
